--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo"src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo"src="mashable.png" alt="tc-logo">
     <img class="press-logo"src="google_play.png" alt="playstore-logo">
     <img class="press-logo"src="tnw.png" alt="the-next-web-logo">
     <img class="press-logo"src="whitehatjr.png" alt="mashable-logo">
@@ -200,7 +200,7 @@
     </div>
     <div class="card-body">
       <h2>₹1000</h2>
-      <p>Full acccess to working of app</p>
+      <p>Full viewing acccess to working of app</p>
       <p>Database viewing access</p>
       <p>Unlimited Website Usage</p>
       <p>Unlimited App Usage</p>
