--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo"src="mashable.png" alt="tc-logo">
+    <img class="press-logo"src="TechCrunch.png" alt="tc-logo">
     <img class="press-logo"src="google_play.png" alt="playstore-logo">
     <img class="press-logo"src="tnw.png" alt="the-next-web-logo">
     <img class="press-logo"src="whitehatjr.png" alt="mashable-logo">
